ee/codegen/python_file_merging/tests/fixtures/nodes/invalid_syntax/generated.py
from vellum.workflows import BaseNode


class MyCustomNode(BaseNode):
